update class notes

--- a/5-prac/package.json
+++ b/5-prac/package.json
@@ -2,11 +2,13 @@
   "scripts": {
     "debug": "nodemon --inspect index.js",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon src/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "helmet": "^7.0.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
