--- a/jr-cms/package.json
+++ b/jr-cms/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "debug": "nodemon --inspect src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "helmet": "^7.0.0",
+    "joi": "^17.10.2",
     "mongoose": "^7.5.1",
     "morgan": "^1.10.0",
     "winston": "^3.10.0"
